<resources>
    <string name="app_name">Logic University</string>

    <string name="dashboard">Dashboard</string>
    <string name="reqdetail_name">Requisition Detail</string>
    <string name="your_string_id"></string>
    <string name="inventory">Inventory</string>
    <string name="app_rej_cp">Collection Point Request</string>
    <string name="tracking">Collection Point</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about">About</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="scanQR">Scan QR</string>
    <string name="approve_title">APPROVED!</string>
    <string name="approve_message">You approve the change collection point request successfully.</string>
    <string name="reject_title">REJECTED!</string>
    <string name="reject_message">You reject the change collection point request.</string>
    <string name="info_title">REQUESTED!</string>
    <string name="info_message">Your request has been sent.</string>
    <string name="remark_title">Remark:</string>
    <string name="note">Notes:</string>
    <string name="note_message">The new requisition!
        You can process this requisition via LUSSIS website. </string>
    <string name="note2_message">Your requisition is approved by store clerk. </string>

    <!--spinner texts-->
    <string name="sup1">1st Supplier</string>
    <string name="sup2">2nd Supplier</string>
    <string name="sup3">3rd Supplier</string>
    <string name="dept1">1st Department</string>
    <string name="dept2">2nd Department</string>
    <string name="dept3">3rd Department</string>
    <string name="item">Item</string>
    <string name="category">Category</string>


</resources>
