<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardHod"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/assignDeptRep"
            android:icon="@drawable/assign"
            android:title="Assign Representative" />

        <item
            android:id="@+id/orderhishod"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="Order History" />
        <item
            android:id="@+id/reportHod"
            android:icon="@drawable/report"
            android:title="@string/report" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/profile"
            android:title="@string/logout" />
    </group>


</menu>